--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.3.5",
     "react-grid-gallery": "^1.0.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
